Recom-8-Ac+SEO+Perf= No img for Text (html/css)

--- a/style.css
+++ b/style.css
@@ -1040,3 +1040,12 @@ h4 {
         text-align: center;
     }
 }
+/*Recommandation 8 - AC + SEO + Performance - NO IMG*/
+.bloc2-title{
+    width: 72%;
+    margin:auto ;
+}
+.bloc4-title{
+    width: 65%;
+    margin: auto;
+}
