Correction HTML et CSS - URL > JS

--- a/style.css
+++ b/style.css
@@ -519,7 +519,7 @@ button {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    opacity: 0;
+    opacity: 1;
     z-index: 500;
     transition: all .3s ease-in-out;
 }
@@ -1078,4 +1078,7 @@ h4 {
 }
 footer a{
     color: black !important;
+}
+*:focus-visible{
+    outline: 2px black solid !important;
 }
